# coderte-nl2diagram

./: .gitignore  README.md  main.py  pyproject.toml
examples/DiagramTransform-Eval/: experiment_proposal.aux  experiment_proposal.fdb_latexmk  experiment_proposal.fls  experiment_proposal.out  experiment_proposal.tex
examples/DiagramTransform-Eval/dataset/human_review/: US10_ClassDiagram.puml  US10_UseCaseDiagram.puml  US11_ClassDiagram.puml  US11_UseCaseDiagram.puml  US11_UserStories.txt  US12_ClassDiagram.puml  US12_UseCaseDiagram.puml  US12_UserStories.txt  US13_ClassDiagram.puml  US13_UseCaseDiagram.puml  US14_ClassDiagram.puml  US14_UseCaseDiagram.puml  US14_UserStories.txt  US15_ClassDiagram.puml  US15_UseCaseDiagram.puml  US15_UserStories.txt  US16_ClassDiagram.puml  US16_UseCaseDiagram.puml  US17_ClassDiagram.puml  US17_UseCaseDiagram.puml  US18_ClassDiagram.puml  US18_UseCaseDiagram.puml  US18_UserStories.txt  US19_ClassDiagram.puml  US19_UserStories.txt  US1_ClassDiagram.puml  US1_UseCaseDiagram.puml  US20_ClassDiagram.puml  US20_UseCaseDiagram.puml  US21_ClassDiagram.puml  US21_UseCaseDiagram.puml  US22_ClassDiagram.puml  US22_UseCaseDiagram.puml  US22_UserStories.txt  US23_ClassDiagram.puml  US23_UseCaseDiagram.puml  US24_ClassDiagram.puml  US24_UseCaseDiagram.puml  US25_ClassDiagram.puml  (+38 more)
examples/DiagramTransform-Eval/dataset_preparation/: build_dataset.py  convert_to_plantuml.py  fix_spanish_in_puml.py  parse_diagrams_json.py  parsed_data.json  plantuml_data.json  translate_to_english.py  translated_data.json  translation_changelog.txt  us_mapping.json
(+4 files in other folders)
